--- a/example/public/index.html
+++ b/example/public/index.html
@@ -6,7 +6,11 @@
     <meta name="theme-color" content="#000000">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:300,400' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100,400' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Mono:300' rel='stylesheet' type='text/css' />
+    <script src="https://kit.fontawesome.com/e015fb99b6.js"></script>
+    
     <title>react-tabletrim</title>
   </head>
 
