change page title

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -11,7 +11,7 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto+Mono:300' rel='stylesheet' type='text/css' />
     <script src="https://kit.fontawesome.com/e015fb99b6.js"></script>
     
-    <title>react-tabletrim</title>
+    <title>TableTrim</title>
   </head>
 
   <body>
